# apich_maph_core-engine

./: Cargo.toml  Dockerfile  README.md  build.rs  dummy.msh  untitled.db  untitled.db.json  untitled.geo
examples/: simple_gmsh_test.rs
src/: lib.rs
src/kernel/: mod.rs
src/meshing/: mod.rs  mod.rs.bak
src/provenance/: mod.rs
src/sandbox/: mod.rs
src/solver/: fdm_solver.rs  fem_solver.rs  mod.rs
src/symbolic/: mod.rs
