
[package]
name = "core-engine"
version = "0.1.0"
edition = "2021"
authors = ["Gemini"]
description = "The core simulation engine for the next-generation open-source platform."

[dependencies]
gmsh-sys = "0.1.2"
mshio = "0.4.2"
pyo3 = { version = "0.21.2", features = ["auto-initialize"] }
wasmer = "4.2.4"
docker-api = "0.14.0"
futures-util = "0.3.31"
# --- Serialization / Deserialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Numerical Computing ---
nalgebra = "0.32"
ndarray = "0.15"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "core_engine"
path = "src/lib.rs"

[dev-dependencies]
actix-rt = "2"

